# superagent-from-scratch

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  PRD.md  README.md  README.zh-CN.md  SPEC.md  STATUS.md  architecture.md  features.json  pyproject.toml
.claude/agents/: superagent-from-scratch-ops.md
.claude/hooks/: stop-progress-append.sh  stop-verify-claims.py
M1/: AGENTS.md  PROGRESS.md  init.sh
evals/: results.tsv
fixtures/: README.md
fixtures/fake_llm/: checkpoint_crash.json  clarification_flow.json  deferred_guard_block.json  deferred_tools_flow.json  echo_roundtrip.json  endless_tool_calls.json  eval_verdicts.json  gate_blind_write_rescue.json  gate_fail_open.json  gate_new_file.json  gate_stale_read.json  gate_summarization_decay.json  gate_truncated_read.json  gate_write_write.json  goal_cap.json  (+20 more)
notes/: 01-deerflow-architecture.md  02-s1-agent-loop.md  03-s2-middleware.md  04-s3-subagent.md  05-s4-skills.md  06-s5-long-task.md  07-s6-memory.md  08-s7-checkpointer.md  09-s8-deferred-tools.md  10-s9-eval-loop.md  11-s10-loop-detection.md  12-s11-read-before-write.md
scripts/: e2e_s1.py  e2e_s9_eval.py
src/: checkpoint.py  deferred.py  evals.py  goal.py  llm.py  loop.py  memory.py  middleware.py  skills.py  subagent.py  tools.py
tests/: test_constraints.py  test_s10_loop_detection.py  test_s11_read_before_write.py  test_s1_loop.py  test_s1_tools.py  test_s2_core_mw.py  test_s2_middleware.py  test_s3_subagent.py  test_s4_skills.py  test_s5_hitl.py  test_s5_todo_goal.py  test_s6_memory.py  test_s7_checkpointer.py  test_s8_deferred.py  test_s9_eval.py
(+28 files in other folders)
